ecmascript/parser/tests/typescript-errors/class/input.ts.stderr
error: Expected Semi, got Some(Bang)
 --> $DIR/tests/typescript-errors/class/input.ts:2:5
  |
2 |   x?!: number;
  |     ^

